--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,23 @@
+# ===========================
 # Python
+# ===========================
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
+*.pyo
+*.pyd
+
+# Virtual environments
 env/
 venv/
 .venv/
 ENV/
+env.bak/
+venv.bak/
+
+# Python distribution / packaging
 build/
 develop-eggs/
 dist/
@@ -20,46 +30,164 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
-# Virtual environments
-.venv/
-venv/
-ENV/
+# PyInstaller
+*.manifest
+*.spec
 
-# IDEs
+# Python testing
+.pytest_cache/
+.coverage
+.coverage.*
+htmlcov/
+.tox/
+.nox/
+.hypothesis/
+nosetests.xml
+coverage.xml
+*.cover
+.cache
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb_checkpoints/
+
+# pyenv
+.python-version
+
+# Celery
+celerybeat-schedule
+celerybeat.pid
+
+# ===========================
+# Node.js / Frontend
+# ===========================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Build outputs
+frontend/dist/
+frontend/dist-ssr/
+frontend/build/
+*.local
+
+# Dependency lock files (optional - remove if you want to track them)
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# ===========================
+# Database & Vector Stores
+# ===========================
+# ChromaDB
+backend/chroma_db/
+chroma_db/
+*.sqlite3
+*.db
+*.sqlite
+
+# ===========================
+# Environment & Config
+# ===========================
+.env
+.env.*
+!.env.example
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# ===========================
+# IDEs and Editors
+# ===========================
+# VSCode
 .vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# IntelliJ IDEA
 .idea/
+*.iws
+*.iml
+*.ipr
+
+# Vim
 *.swp
 *.swo
 *~
+*.swn
 
-# OS
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Visual Studio
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# ===========================
+# Operating System
+# ===========================
+# macOS
 .DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# Windows
 Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+Desktop.ini
+$RECYCLE.BIN/
 
-# Node
-node_modules/
-npm-debug.log
-yarn-error.log
-package-lock.json
+# Linux
+*~
+.directory
+.Trash-*
 
-# React build
-frontend/build/
+# ===========================
+# Logs
+# ===========================
+*.log
+logs/
+*.log.*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# Data files (optional - uncomment if you want to exclude large data)
+# ===========================
+# Data Files (Optional)
+# ===========================
+# Uncomment if you want to exclude large datasets
+# data/
+# *.csv
+# *.json
 # StartUp_FundingScrappingData/
 
-# Environment variables
-.env
-.env.local
-
-# Logs
-*.log
-
-# Testing
-.coverage
-htmlcov/
-.pytest_cache/
+# ===========================
+# Temporary & Misc
+# ===========================
+*.tmp
+*.temp
+*.bak
+*.backup
+.cache/
+tmp/
+temp/
