--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
-pandas==2.2.3
-numpy==2.0.2
-sentence-transformers==3.3.1
-faiss-cpu==1.13.2
-streamlit==1.41.1
-fastapi==0.115.6
-uvicorn==0.34.0
-langdetect==1.0.9
-PyPDF2==3.0.1
-python-multipart==0.0.20
-pydantic==2.10.5
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+pydantic>=2.0
+pandas>=2.2.0
+numpy>=1.26.0
+sentence-transformers==2.3.1
+torch>=2.2.0
+python-multipart==0.0.6
+chromadb==0.4.22
+ollama==0.1.7
+
+# RAGAS - RAG Evaluation Framework
+ragas==0.1.19
+langchain==0.3.13
+langchain-community==0.3.13
+openai==1.59.5
+datasets==3.2.0
